<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

   <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimaryDark"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"       >

       <Spinner
           android:id="@+id/ddl_users"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@android:drawable/btn_dropdown"
           android:spinnerMode="dropdown"/>
       <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:app="http://schemas.android.com/apk/res-auto"
           xmlns:tools="http://schemas.android.com/tools"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:background="#fff"
           tools:layout_editor_absoluteX="316dp"
           tools:layout_editor_absoluteY="27dp">
       <EditText
           android:id="@+id/dp"
           android:layout_width="145dp"
           android:layout_height="wrap_content"
           android:layout_alignParentTop="true"
           android:layout_marginTop="0dp"
           android:clickable="true"
           android:focusableInTouchMode="false"
           android:hint="Choisir Date 1"
           android:inputType="date" />

       <EditText
           android:id="@+id/timePicker1"
           android:layout_width="70dp"
           android:layout_height="wrap_content"
           android:inputType="time"
           android:layout_toEndOf="@+id/dp"
           />

       <EditText
           android:id="@+id/timePicker2"
           android:layout_width="70dp"
           android:layout_height="wrap_content"
           android:inputType="time"
           android:layout_toEndOf="@+id/timePicker1"
           />
       </RelativeLayout>

        <EditText
            android:id="@+id/old_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/new_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_new_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

       <RadioGroup
           android:id="@+id/selectTypeTitre"
           android:layout_below="@+id/txtView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           >
           <TextView
               android:id="@+id/header"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Titre d'Employé:"
               />
           <RadioButton
               android:id="@+id/rb_resp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/resp"/>
           <RadioButton
               android:id="@+id/rb_Titre_Hote"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/hote"
               android:checked="true"/>
           <RadioButton
               android:id="@+id/rb_Accueil"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/accueil"/>
           <RadioButton
               android:id="@+id/rb_Barman"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/barman"/>
           <RadioButton
               android:id="@+id/rb_Cusine"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/cusine"/>
       </RadioGroup>


       <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           tools:context=".MainActivity">

           <Button
               android:id="@+id/button_image"
               android:layout_width="wrap_content"
               android:layout_height="48dp"
               android:layout_alignParentBottom="true"
               android:layout_centerHorizontal="true"
               android:onClick="onclicktakePicture"
               android:text="Take a picture!"/>

           <ImageView
               android:id="@+id/user_profile_photo"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_centerHorizontal="true"
               android:layout_above="@+id/button_image"
               android:src="@drawable/profile_image_1"

               />



       </RelativeLayout>


        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_user_name"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />
        <EditText
            android:id="@+id/user_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_user_mail"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />
       <EditText
           android:id="@+id/user_adresse"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/hint_user_adresse"
           android:inputType="text"
           android:maxLines="2"
           android:singleLine="true" />
       <EditText
           android:id="@+id/user_tel"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/hint_user_tel"
           android:inputType="phone"
           android:maxLines="1"
           android:singleLine="true" />

       <RadioGroup
           android:id="@+id/selectTypeSalaire"
           android:layout_below="@+id/txtView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           >
           <TextView
               android:id="@+id/header2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Salaire:"
               />
           <RadioButton
               android:id="@+id/rb_range1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Range 1"
               android:checked="true"/>

           <RadioButton
               android:id="@+id/rb_range2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Range 2"/>
       </RadioGroup>

       <RadioGroup
           android:id="@+id/selectTypeContrat"
           android:layout_below="@+id/txtView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           >
           <TextView
               android:id="@+id/header3"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Contrat:"
               />
           <RadioButton
               android:id="@+id/rb_18h"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="18h"
               android:checked="true"/>

           <RadioButton
               android:id="@+id/rb_24h"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="24h"/>
           <RadioButton
               android:id="@+id/rb_35h"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="35h"/>
       </RadioGroup>

       <TextView
           android:id="@+id/date_commence"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="Date debut:"
           />

       <DatePicker
           android:id="@+id/dp_date_commence"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:headerBackground="@color/btn_logut_bg"
           android:theme="@android:style/Widget.Holo.DatePicker"
           tools:style="@android:style/Widget.Holo.DatePicker"></DatePicker>




       <!-- android:hint="@string/prompt_password" -->
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"

            android:imeActionId="8"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/new_pass"
            android:imeActionId="8"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/addUser"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_add"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

       <Button
           android:id="@+id/addPlanning"
           style="?android:textAppearanceSmall"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="16dp"
           android:background="@color/colorPrimaryDark"
           android:text="Ajouter Planning"
           android:textColor="@android:color/white"
           android:textStyle="bold" />

        <Button
            android:id="@+id/changeEmail"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_change"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/changePass"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_change"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/send"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_send"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/remove"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_remove"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/add_user_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add_user"
            android:textStyle="bold" />

       <Button
           android:id="@+id/add_planning_button"
           style="?android:textAppearanceSmall"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="16dp"
           android:text="Ajouter Planning"
           android:textStyle="bold" />

        <Button
            android:id="@+id/change_email_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/change_email"
            android:textStyle="bold" />

        <Button
            android:id="@+id/change_password_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/change_password"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sending_pass_reset_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/send_password_reset_email"
            android:textStyle="bold" />

        <Button
            android:id="@+id/remove_user_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/remove_user"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sign_out"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/btn_sign_out"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>